manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oceansurge
  labels:
    name: oceansurge
    app.kubernetes.io/name: storm-surge
    app.kubernetes.io/part-of: oceansurge
    storm-surge.io/managed: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
